@@ -16,3 +16,4 @@ Bug fixes
  * Avoid use of ``icon`` class name on userbar icon to prevent clashes with front-end styles (Karran Besen)
  * Prevent focused button labels from displaying as white on white (Karran Bessen)
  * Avoid showing preview button on moderation dashboard for page types with preview disabled (Dino Perovic)
+ * Prevent oversized buttons in moderation dashboard panel (Dan Braghis)
